General discussion re-written

--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -553,31 +553,44 @@ The present mega-analysis provides a comprehensive evaluation of the IAS, examin
 
 <!-- Structural insights from Study 1 -->
 
-Study 1 re-analysed the IAS structure using a combination of traditional psychometric and network-based methods. Across these complementary approaches, seven stable item pairs consistently emerged (i.e., Hungry–Thirsty, Urinate–Defecate, Muscles–Pain, Breathing–Heart, Cough–Sneeze, Wind–Burp, and Bruise–Blood sugar) yielding a refined 14-item structure that demonstrated superior model fit and cross-dataset stability compared to previously proposed unidimensional or bifactor solutions. These findings challenge earlier interpretations of the IAS as reflecting a single latent construct [e.g., @brand2023; @murphy2019] and instead indicate that the scale captures multiple, interrelated but domain-specific clusters of bodily sensations.
+<!-- Structural insights from Study 1 -->
 
-A shorter version of the IAS was previously proposed by @lin2023, who developed a 12-item form based on item response theory analyses. Their analysis supported a unidimensional structure, which they interpreted as indexing a single factor of self-reported interoceptive accuracy. In contrast, the present results suggest that apparent local dependencies between items may not represent measurement artefacts but rather theoretically meaningful associations among functionally or phenomenologically coupled sensations (e.g., Heart–Breathing), corresponding to distinct bodily domains such as visceral sensations, musculoskeletal cues, and expulsion phenomena.
+Study 1 re-analysed the IAS using complementary psychometric and network-based approaches. Across analyses, seven stable item pairings emerged (Hungry–Thirsty, Urinate–Defecate, Muscles–Pain, Breathing–Heart, Cough–Sneeze, Wind–Burp, and Bruise–Blood sugar), yielding a refined 14-item structure with superior fit and cross-dataset stability compared to previously proposed unidimensional or bifactor models. These results challenge interpretations of the IAS as a single latent construct [e.g., @brand2023; @murphy2019] and instead indicate that it captures multiple, interrelated but domain-specific clusters of bodily sensations.
 
-Such pairings likely reflect sensations that co-occur physiologically or contextually, such as hunger and thirst, or coughing and sneezing, and tend to be perceived and appraised together. This pattern implies that perceived accuracy within one bodily domain generalizes to related sensations, yielding a clustered rather than continuous organization of interoceptive beliefs. 
-
-<!-- there is a paper that states this better but cannot find it yet --> 
-Notably, objective interoceptive accuracy tasks across modalities often show weak or absent associations [e.g., @bruni2023interoception; @ferentzi2018interoceptive; @garfinkel2016interoceptive], whereas self-reported interoceptive beliefs appear to cluster more strongly within shared physiological domains [**ref**]. This divergence reinforces the view that subjective interoceptive accuracy may reflect a domain-specific self-belief system rather than a general perceptual ability.
+Unlike @lin2023, whose 12-item solution supported unidimensionality, the present findings suggest that local dependencies between items reflect meaningful theoretical coupling among functionally related sensations (e.g., Heart–Breathing). Such clustering likely mirrors the way bodily signals co-occur physiologically or phenomenologically (e.., hunger with thirst, coughing with sneezing) and are therefore perceived and evaluated together. Perceived accuracy in one bodily system may generalize to conceptually or functionally linked sensations, yielding a clustered rather than continuous organization of interoceptive beliefs. Consistent with this view, self-reported interoceptive awareness across related axes (e.g., cardiac and respiratory) tends to show positive associations [@garfinkel2016interoceptive], whereas objective measures of interoceptive accuracy across modalities typically show weak or absent correlations [@bruni2023interoception; @ferentzi2018interoceptive]. This dissociation suggests that subjective interoceptive beliefs are structured according to functional bodily domains rather than reflecting a single general capacity.
 
 <!-- Dispositional correlates and domain specificity (Study 2) -->
 
 <!-- Interoception and interoception-related -->
-Study 2 extended these findings by examining associations between IAS scores from the full scale and the pairings identified in study 1, with a broad set of interoceptive, affective, personality, and belief-related measures.  Consistent with prior research [e.g., @brand2023; @garfinkel2015knowing; @gaggero2021], the IAS showed positive associations with measures of interoceptive sensibility (e.g., MAIA subscales reflecting noticing, attention regulation, and body trust) and negative associations with measures of interoceptive difficulties (e.g., alexithymia and interoceptive confusion).
+Study 2 extended these findings by examining the IAS’s associations with interoceptive, affective, personality, and belief-related traits. Consistent with prior work, the IAS correlated positively with adaptive aspects of interoceptive sensibility (e.g., MAIA subscales reflecting noticing, attention regulation, and body trust) and negatively with interoceptive difficulties, namely alexithymia and interoceptive confusion [e.g., @brand2023; @garfinkel2015knowing; @gaggero2021].
 
-Although associations between the IAS and the BPQ subscales replicated prior work (e.g., @Brand2023; @Koike2023; @Gaggero2021), interpretation remains uncertain due to conceptual ambiguity in the BPQ–Body Awareness subscale. Prior studies have reported positive, negative, and even quadratic relationships (e.g., @Campos2021; @Lin2023), and some authors have suggested that these mixed findings stem from divergent interpretations of the items—specifically, whether they capture attentional focus on bodily sensations or perceived accuracy in detecting them (e.g., @Gabriele2022Dissociations; @Trevisan2021Adaptive). Thus, although we observed a positive association between the BPQ–Body Awareness and the IAS, this result should be interpreted with caution, and future studies should assess participants’ understanding of BPQ items to clarify the nature of this relationship.
+<!-- Although associations between the IAS and the BPQ subscales replicated prior work (e.g., @brand2023; @koike2023; @gaggero2021), interpretation remains uncertain due to conceptual ambiguity in the BPQ–Body Awareness subscale. Prior studies have reported positive, negative, and even quadratic relationships (e.g., @campos2021; @lin2023), and some authors have suggested that these mixed findings stem from divergent interpretations of the items—specifically, whether they capture attentional focus on bodily sensations or perceived accuracy in detecting them (e.g., @gabriele2022Dissociations; @campos2021). Thus, although we observed a positive association between the BPQ–Body Awareness and the IAS, this result should be interpreted with caution, and future studies should assess participants’ understanding of BPQ items to clarify the nature of this relationship. -->
 
 <!-- Mood and psychopathological disorders domain specific -->
+Across dispositional constructs, individuals reporting higher symptoms of depression and anxiety tended to perceive themselves as less accurate in detecting bodily signals, in line with previous findings [e.g., @brand2023; @khalsa2018; @nord2022interoceptive]. Crucially, these associations were not uniform across bodily domains: the strongest effects involved visceral sensations (e.g., hunger, thirst), whereas cardiorespiratory and expulsion domains showed weaker or inconsistent relationships. This domain specificity suggests that beliefs about one’s visceral accuracy may be more psychologically and clinically relevant than beliefs about reflexive or surface sensations.
 
-Across dispositional constructs, negative associations emerged between self-reported interoceptive accuracy (IAS) and a range of affective and psychopathological traits. Individuals reporting greater symptoms of depression and anxiety also tended to perceive themselves as less accurate in detecting bodily signals. Crucially, these associations were not uniform across bodily domains: the strongest effects consistently involved visceral items (e.g., hunger, thirst), whereas cardioceptive and respiratory items showed weaker or inconsistent patterns. This domain-specific pattern highlights that self-perceived accuracy in internal bodily regulation is more psychologically and clinically relevant than accuracy in reflexive or surface-bodily sensations.
+This pattern may help clarify inconsistencies in the literature linking interoception and emotion. Reviews and meta-analyses report that performance-based measures of interoceptive accuracy, particularly in cardioception, often show weak or absent correlations with depression and anxiety [@jenkinson2024interoception; @banellis2025interoceptive; @adams2022association]. In contrast, self-reported interoceptive measures typically show stronger, often negative, associations with internalizing traits [e.g., @brand2022; @lin2023; @clemente2024relationship]. These discrepancies likely reflect both conceptual distinctions between perceptual accuracy and metacognitive self-belief [@khalsa2018; @garfinkel2015knowing; @suksasilp2022towards] and variation in the bodily domains assessed. The present results extend this framework by demonstrating that associations between interoceptive self-beliefs and affective traits are concentrated in psychologically salient visceral domains. Thus, the field’s heavy reliance on cardioceptive tasks may have obscured more meaningful relationships in other interoceptive modalities.
 
-This domain-specificity may help explain inconsistencies in the literature linking interoception and emotional symptomatology. Reviews and meta-analyses indicate that performance-based measures of cardiac interoceptive accuracy, historically the dominant index of interoception, are often unrelated to depression or anxiety [@jenkinson2024interoception; @banellis2025interoceptive; @adams2022association]. In contrast, self-reported interoceptive measures show stronger, albeit sometimes divergent, associations with internalizing traits [e.g., @brand2022; @lin2023; @clemente2024relationship; @murphy2019]. These discrepancies likely reflect the distinction between objective sensitivity and metacognitive self-belief [@khalsa2018; @garfinkel2015knowing; @suksasilp2022towards]. Our results extend this view by demonstrating that even within self-reported interoception, relationships with affective traits are structured along bodily axes, reinforcing the importance of considering domain-specific facets of the IAS.
 
-Beyond mood, similar but weaker patterns emerged across other dispositional traits, again following a visceral-focused gradient. Autistic traits, schizotypal tendencies, and maladaptive personality dimensions generally correlated negatively with IAS scores, primarily for visceral items, whereas cardioceptive and respiratory beliefs contributed little. These findings align with evidence that interoceptive self-beliefs are attenuated in conditions involving social–emotional difficulties or reduced bodily awareness. For example, interoceptive dimensions predict interpersonal-like and disorganized-like schizotypal traits [@pasciucco2025predictive], and autistic individuals report subjective difficulties perceiving internal bodily states such as hunger, thirst, and fatigue, even when objective measures of accuracy are intact [@itoi2023relationship]. More broadly, atypical interoception constitutes a transdiagnostic risk factor for psychopathology, again emphasizing differences across bodily domains [@brewer2023atypical]. Collectively, these results underscore that diminished self-perceived interoceptive accuracy is not a uniform trait but varies systematically by bodily domain, with visceral beliefs showing the clearest psychological relevance.
+<!-- Psychopathology -->
+Beyond mood, similar though weaker patterns emerged for autistic traits, schizotypy, and maladaptive personality dimensions. These traits tended to correlate negatively with self-perceived interoceptive accuracy, particularly within visceral and musculoskeletal domains, while showing little or no association in other areas. This selective pattern suggests that diminished confidence in bodily perception may contribute to specific social–emotional and personality features, rather than reflecting a general interoceptive deficit. These results align with evidence that interoceptive self-beliefs, more than objective accuracy, track variation in emotional awareness, social connectedness, and psychopathology [@torregrossa2022interoceptive; @williams2023characterizing; @brand2022].
 
-Taken together, the evidence indicates that the IAS reflects a domain-structured metacognitive construct, complementary to but distinct from objective interoceptive performance. Visceral beliefs—linked to hunger, thirst, or pain—consistently show the strongest relationships with emotional and dispositional traits, whereas cardioceptive and respiratory beliefs contribute little. Recognizing this domain specificity not only clarifies inconsistencies in prior studies emphasizing heartbeat detection but also highlights the importance of assessing a wider range of interoceptive modalities in future research, particularly those related to visceral homeostasis.
+Taken together, these findings suggest that self-perceived interoceptive accuracy is a differentiated construct, varying systematically across bodily systems and psychological traits. Beliefs about visceral sensations, in particular, show the most consistent associations with affective and dispositional features. Although modest in magnitude, these effects underscore the value of considering domain-specificity when linking interoceptive beliefs to emotion and mental health.
+
+<!-- Methodological and applied considerations -->
+Methodologically, combining traditional psychometrics with network-based approaches proved valuable. EGA complemented factor analysis by identifying meaningful inter-item dependencies, producing a more interpretable and stable structure. The refined 14-item IAS balances parsimony and predictive validity, illustrating how network-informed scale refinement, beyond scale development [@golino2017exploratory], can enhance construct clarity.
+
+The IAS nonetheless remains limited in scope. Certain interoceptive modalities (e.g., gastric, tactile) are underrepresented, and items lack contextual specification (e.g., physiological vs. affective triggers). For instance, a racing heart could signal anxiety or exercise; without context, it is unclear which state participants referenced from. Such ambiguities may constrain ecological validity and contribute to variability across studies [@vlemincx2023novel]. Expanding item content and adopting context-specific phrasing will be important for future measurement development.
+
+Clinically, the domain-specific structure of the IAS highlights that interoceptive disruptions in affective and psychopathological conditions may center primarily on beliefs about visceral sensations rather than global interoceptive deficits. This perspective suggests new routes for targeted assessment and intervention focusing on specific bodily domains.
+
+<!-- Limitations and future directions -->
+Nonetheless, the current work is not without its limiations. This paper did not evaluate the IAS alongside other questionnaires such as the BPQ or MAIA, whose conceptual overlap and psychometric inconsistencies complicate interpretation [@ferentzi2021examining; @rogowska2023validation; @campos2021; @vig2023self]. Because the IAS uniquely targets interoceptive self-reported accuracy, a dimension previously assessed only via performance tasks such as the HDT and HCT, our focus was on its structure and correlates rather than introducing established measures with documented shortcomings. Future work should employ contemporary analytic methods, such as EGA and network modeling, to evaluate convergent and discriminant validity across interoceptive domains and clarify how self-belief and accuracy measures jointly shape interoceptive functioning.
+
+<!-- Conclusion -->
+
+
+
 
 
 # References
