--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -1267,6 +1267,17 @@ abstract = {Conscious interoception, the perception of internal bodily states, i
   publisher = {Psychological Assessment Resources}
 }
 
+@article{williams2023characterizing,
+  title={Characterizing interoceptive differences in autism: a systematic review and meta-analysis of case--control studies},
+  author={Williams, Zachary J and Suzman, Evan and Bordman, Samantha L and Markfeld, Jennifer E and Kaiser, Sophia M and Dunham, Kacie A and Zoltowski, Alisa R and Failla, Michelle D and Cascio, Carissa J and Woynaroski, Tiffany G},
+  journal={Journal of Autism and Developmental Disorders},
+  volume={53},
+  number={3},
+  pages={947--962},
+  year={2023},
+  publisher={Springer}
+}
+
 @article{spitzer2006brief,
   title={A brief measure for assessing generalized anxiety disorder: the GAD-7},
   author={Spitzer, Robert L and Kroenke, Kurt and Williams, Janet BW and L{\"o}we, Bernd},
