--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -1267,6 +1267,16 @@ abstract = {Conscious interoception, the perception of internal bodily states, i
   publisher = {Psychological Assessment Resources}
 }
 
+@article{torregrossa2022interoceptive,
+  title={Interoceptive functioning in schizophrenia and schizotypy},
+  author={Torregrossa, L{\'e}nie J and Amedy, Amad and Roig, Jacqueline and Prada, Andrea and Park, Sohee},
+  journal={Schizophrenia research},
+  volume={239},
+  pages={151--159},
+  year={2022},
+  publisher={Elsevier}
+}
+
 @article{williams2023characterizing,
   title={Characterizing interoceptive differences in autism: a systematic review and meta-analysis of case--control studies},
   author={Williams, Zachary J and Suzman, Evan and Bordman, Samantha L and Markfeld, Jennifer E and Kaiser, Sophia M and Dunham, Kacie A and Zoltowski, Alisa R and Failla, Michelle D and Cascio, Carissa J and Woynaroski, Tiffany G},
